--- a/health_tracker/templates/index.html
+++ b/health_tracker/templates/index.html
@@ -4,17 +4,21 @@
 
 <head>
   <meta charset="utf-8">
-  <title>index.html</title>
-
+  <title>Health Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/bower_components/fontawesome/css/font-awesome.min.css' %}" />
 </head>
 
 <body>
 
   <h1>Hello world!</h1>
-
+ <i class="fa fa-cog"></i>
+ <!--scripts-->
+ <!--order matters-->
+  <script src="{% static 'js/bower_components/jquery/dist/jquery.min.js' %}"></script>
+  <script src="{% static 'js/bower_components/underscore/underscore-min.js' %}"></script>
+  <script src="{% static 'js/bower_components/backbone/backbone-min.js' %}"></script>
   <script src="{% static 'js/main.js' %}"></script>
 </body>
 
