--- a/health_tracker/static/css/main.css
+++ b/health_tracker/static/css/main.css
@@ -1,3 +1,28 @@
-h1 {
-  color: red;
-}
+body {
+  background-color: #fff;
+  color: #000;
+  font-size: 1.4em;
+  padding: 2em; }
+
+ul {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0;
+  padding: .4em 0;
+  height: 70px; }
+
+ul li {
+  display: inline-block;
+  margin-right: 2em;
+  padding-bottom: .5em; }
+
+ul li a {
+  text-decoration: none;
+  color: #000;
+  letter-spacing: .1em;
+  display: inline-block;
+  padding-bottom: .3em;
+  border: 0px solid #000; }
+
+ul li a:hover {
+  border-bottom: 4px solid #000; }
