--- a/health_tracker/templates/index.html
+++ b/health_tracker/templates/index.html
@@ -30,17 +30,26 @@
   </ul>
 
 
+<div class="main-content">
+  <!--routed content goes here-->
+</div>
+
 
         <div class="content-container">
+
+
+
         </div>
 
 
-  <script type="text/template" id="home">
+
+
+  <script type="text/template" id="activities">
   <h1>Home</h1>
 
-  <p>
-    This is a stripped down example of routing using backbone. 
+  <p>home page text
   </p>
+
   <p>
     <a href="https://github.com/BenQuirk/backbone-routing-example">
     See it on github.
