show activity basic call working

--- a/health_tracker/static/css/main.css
+++ b/health_tracker/static/css/main.css
@@ -26,3 +26,17 @@ ul li a {
 
 ul li a:hover {
   border-bottom: 4px solid #000; }
+
+
+.activity-tab {
+  border:1px solid #000;
+  display:block;
+  padding:1em;
+  text-align:center;
+  margin:1em auto;
+  max-width:400px;
+  box-shadow: 0 1px 2px 0 rgba(0,0,0,.5);
+}
+.activity-tab a {
+  text-decoration:none;
+}
