--- a/health_tracker/templates/index.html
+++ b/health_tracker/templates/index.html
@@ -13,10 +13,6 @@
 <body>
 
 
-<div class="button">
-
-  Click Me! 
-</div>
 
 
 
@@ -39,6 +35,10 @@
 <div class="main-content">
   <!--routed content goes here-->
 </div>
+
+
+  <input type="text" placeholder="New Activity" class="add-activity-text">
+  <div class="add-activity-button">Submit</div>
 
 
         <div class="content-container">
