--- a/health_tracker/templates/index.html
+++ b/health_tracker/templates/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="{% static 'css/main.css' %}" />
   <link rel="stylesheet" href="{% static 'css/mobile.css' %}" />
   <link rel="stylesheet" href="{% static 'css/bower_components/fontawesome/css/font-awesome.min.css' %}" />
+
+
 </head>
 
 <body>
@@ -29,6 +31,8 @@
 
 
     <div class="add-activity-container">
+      <form action="." method="post">{% csrf_token %}
+        <input type="text" placeholder="New Activity" class="add-activity-text" id="inputID"><div class="add-activity-button">+ add</div></form>
     </div>
 
 
@@ -45,6 +49,42 @@
   <script src="{% static 'js/bower_components/underscore/underscore-min.js' %}"></script>
   <script src="{% static 'js/bower_components/backbone/backbone-min.js' %}"></script>
   <!--<script src="{% static 'js/bower_components/js-cookie/src/js.cookie.js' %}"></script>-->
+  <script>
+  function getCookie(name) {
+      var cookieValue = null;
+      if (document.cookie && document.cookie != '') {
+          var cookies = document.cookie.split(';');
+          for (var i = 0; i < cookies.length; i++) {
+              var cookie = jQuery.trim(cookies[i]);
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+  }
+  var csrftoken = getCookie('csrftoken');
+
+  function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+
+
+$.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+
+
+
+
+  </script>
   <script src="{% static 'js/router.js' %}"></script>
   <script src="{% static 'js/main.js' %}"></script>
 
