--- a/health_tracker/accounts/templates/registration/login.html
+++ b/health_tracker/accounts/templates/registration/login.html
@@ -1,10 +1,20 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Health Tracker</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
 </head>
 <body>
+
+  <h1>Sign Into Health Tracker</h1>
+  
+
+  <div class= "activity-container">
+
+    <div class= "activity-tab">
+
 
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
@@ -26,5 +36,11 @@
         </form>
     {# Assumes you setup the password_reset view in your URLconf #}
     {#<p><a href="{% url 'password_reset' %}">Lost password?</a></p>#}
+
+    </div>
+
+  </div>
+
+
 </body>
 </html>
