--- a/health_tracker/static/css/main.css
+++ b/health_tracker/static/css/main.css
@@ -48,6 +48,8 @@ header h1 {
 }
 
 .main-content {
+  max-width:350px;
+  margin:0 auto;
 }
 
 
@@ -70,7 +72,7 @@ header h1 {
   letter-spacing:.1em;
   margin:1em auto;
   max-width:100%;
- transition:.5s ease;
+  transition:.5s ease;
   text-decoration:none;
 }
 .activity-tab a {
@@ -117,7 +119,25 @@ header h1 {
 
 
 
-@media (max-device-width: 600px){
-    h1 {font-size:1em;}
-    body { border:10px solid red;}
+/* details page styles */
+.detail-title {
+  margin:0 auto;
+  display:block;
+  max-width:350px;
+  padding:.7em 1em .4em 1em;
+  text-align:center;
+  transition:.5s ease;
+  font-size:1.5em;
+  background:rgba(0,0,0,.3);
+  color:#f8f8f8;
+
+
+
+}
+.detail-title span {
+  display:block;
+  font-size:.5em;
+  margin:15px 10px 10px 10px;
+  padding:5px 5px 7px 5px;
+  background:rgba(0,0,0,.2);
 }
