styled registration page

--- a/health_tracker/accounts/templates/registration/login.html
+++ b/health_tracker/accounts/templates/registration/login.html
@@ -9,7 +9,7 @@
 <body>
 
   <h1>Sign Into Health Tracker</h1>
-  
+
 
   <div class= "activity-container">
 
@@ -37,6 +37,8 @@
     {# Assumes you setup the password_reset view in your URLconf #}
     {#<p><a href="{% url 'password_reset' %}">Lost password?</a></p>#}
 
+<br />
+ <span class="new-user-link">New user? <a href="/login">Register Here.</a></span>
     </div>
 
   </div>
